Integrate read only JAR filesystem into Javac.